05/1과제/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wsc
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
